--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
       </div>  
    
       <div>       
-           <img src="d:\my-website\imgs\testimonial-img-03.jpg  " alt="  ">
+        <img src="imgs/testimonial-img-03.jpg" alt=" ">
            <p>   Nulla finibus ligula nec tortor convallis tincidunt. Interdum et malesuada fames ac ante ipsum primis in faucibus.</p>         
            <br>   
            <p> Sandar Soft(Marketing)</p>   
@@ -217,5 +217,4 @@
 </body>
 
        
-
 </html>
